--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,9 @@
         "psr-4": {
             "ctqsoftware\\DigitalCep\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "9",
+        "squizlabs/php_codesniffer": "3.*"
     }
 }
